fixed the overlapping sidebar

--- a/app/static/css/sidebar.css
+++ b/app/static/css/sidebar.css
@@ -3,7 +3,12 @@
  * Copyright 2013-2016 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
-
+.sidebar {
+  top: 0;
+  bottom: 0;
+  overflow-y: scroll;
+  background-color: transparent;
+}
 .sidebar .sidebar-nav.navbar-collapse {
     padding-right: 0;
     padding-left: 0;
